# PySlice

./: .gitignore  INSTALL.md  README.md  main.py  math.txt  pyproject.toml  requirements.txt  test_simulation.py
src/io/: loader.py
src/multislice/: BBEditRunTemp-calculators.py  calculators.py  calculators_memory_efficient.py  multislice.py  potentials.py  trajectory.py
src/postprocessing/: .py  haadf_data.py  tacaw_data.py  tacaw_data_per_probe.py  wf_data.py
src/tacaw/: ms_calculator.py  ms_calculator_abtem.py  ms_calculator_ase.py  ms_calculator_npy.py  ms_calculator_torch.py  multislice_npy.py  multislice_torch.py  potential.py  potential_torch.py  tacaw_data.py  trajectory.py  wf_data.py
src/unittests/: 00_probe.py  01_potentials.py  02_propagate.py  03_manyprobes.py  04_haadf.py  05_tacaw.py  06_loaders.py  07_defocus.py  example.ipynb  haadf-test.npy  potentials.py  tacaw_npy.py
