[project]
name = "jax-tacaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "abtem>=1.0.6",
    "ase>=3.26.0",
    "dataclasses>=0.8",
    "ipykernel>=6.0.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "jupyter>=1.0.0",
    "logging>=0.4.9.6",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "ovito>=3.8.0",
    "pathlib>=1.0.1",
    "ptyrodactyl>=0.3.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "typing-extensions>=4.14.1",
]
